# motsmeles

./: .gitignore  .gitmodules  GenerateurDeMotsMeles.py  README.md  Untitled-1.py  _prénoms.txt  constructeurDeMotsMeles.py  dds.txt  debug.ipynb  game1.txt  motsmeles.py  motsmeles.txt  pyproject.toml  subparsers.py  test.ipynb  test.py  test_gui.py  usage.ipynb
dataletters/: A.csv  B.csv  C.csv  D.csv  E.csv  F.csv  G.csv  H.csv  I.csv  J.csv  K.csv  L.csv  M.csv  N.csv  O.csv  P.csv  Q.csv  R.csv  S.csv  T.csv  U.csv  V.csv  W.csv  X.csv  Y.csv  Z.csv  inconnu.csv
motsmeles/: __init__.py  __main__.py  game.py  generateur.py  generator.py  gui.py
tests/: test.py  test_gui.py  test_solver.py
